--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.75MB/s(Youtube:不良林), server: 150.230.4.136, port: 11151, type: vmess, uuid: 18ef8b86-5dfe-48a9-b4e4-b5f595f7e555, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.96MB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇸🇬 新加坡-1.08MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-967.7KB/s(Youtube:不良林), server: 51.210.179.47, port: 31225, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2, server: 155.248.162.21, port: 443, type: vmess, uuid: 7454097f-15fb-44bb-9e59-e1fdd1ac03a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.58MB/s(Youtube:不良林), server: kr.xxnmsl.com, port: 80, type: vmess, uuid: f295e664-3c47-4f0a-b337-02ba9cd01bf4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: kr.xxnmsl.com}}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
-  - {name: 🇸🇬 新加坡-2.34MB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.28MB/s(Youtube:不良林), server: 155.248.162.21, port: 443, type: vmess, uuid: 7454097f-15fb-44bb-9e59-e1fdd1ac03a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-987.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.23MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇨🇦 加拿大-196.8KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇬🇧 英国-2.18MB/s(Youtube:不良林), server: 152.89.210.84, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
+  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: 138.2.52.84, port: 23140, type: vmess, uuid: e03f030e-87a6-4282-9656-461732cc3b1f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.52.84}}
+  - {name: 🇺🇸 美国-353.9KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇭🇰 香港-3.05MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-967.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.25MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
