--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-6.28MB/s(Youtube:不良林), server: 155.248.162.21, port: 443, type: vmess, uuid: 7454097f-15fb-44bb-9e59-e1fdd1ac03a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-987.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-5.04MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.23MB/s(Youtube:不良林), server: 152.89.210.105, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇨🇦 加拿大-196.8KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇬🇧 英国-2.18MB/s(Youtube:不良林), server: 152.89.210.84, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: 138.2.52.84, port: 23140, type: vmess, uuid: e03f030e-87a6-4282-9656-461732cc3b1f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 138.2.52.84}}
-  - {name: 🇺🇸 美国-353.9KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇭🇰 香港-3.05MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇦 加拿大-717.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.210.179.47, port: 31225, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: 152.89.210.105, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-12.21MB/s(Youtube:不良林), server: 60.249.3.125, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-987.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.04MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.23MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-196.8KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-353.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.05MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
