--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.18MB/s(Youtube:不良林), server: 152.89.210.84, port: 9024, type: ss, cipher: aes-256-cfb, password: BejrQvtu9sqUeNuZ}
-  - {name: 🇨🇦 加拿大-717.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-3.82MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇫🇷 法国-1.93MB/s(Youtube:不良林), server: 51.210.179.47, port: 31225, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.98MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.00MB/s(Youtube:不良林), server: 152.89.210.105, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-12.21MB/s(Youtube:不良林), server: 60.249.3.125, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林), server: 213.183.53.177, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.95MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-873.5KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇭🇰 香港-13.22MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-811.6KB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.82MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇬🇧 英国-2.42MB/s(Youtube:不良林), server: 152.89.210.84, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇬🇧 英国-1.88MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.18MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-717.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-12.21MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.33MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-13.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-811.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.42MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
