--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.06MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-949.9KB/s(Youtube:不良林), server: 134.195.196.231, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇬🇧 英国-2.82MB/s(Youtube:不良林), server: 152.89.210.105, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
-  - {name: 🇫🇷 法国-964.4KB/s(Youtube:不良林), server: 51.210.179.47, port: 31225, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-17.51MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-657.3KB/s(Youtube:不良林), server: 134.195.196.231, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.39MB/s(Youtube:不良林), server: 152.89.210.84, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇬🇧 英国-1.78MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇯🇵 日本-2.92MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-12.21MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-983.5KB/s(Youtube:不良林), server: 134.195.196.231, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇭 瑞士-1.62MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.71MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 213.183.53.177, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇦 加拿大-763.1KB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-3.45MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇨🇳 中国-6.74MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.47MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-949.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-964.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-17.51MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-657.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.39MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.92MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.21MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-983.5KB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-1.62MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.71MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-763.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.47MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
